--- a/src/components/PostsTable/style.css
+++ b/src/components/PostsTable/style.css
@@ -1,18 +1,61 @@
-
-.postsList-Container{
+.postsList-Container {
     margin-top: 30px;
-}
-
-.postsList-group{
-    border: 1px solid black;
-    margin: 10px;
-}
-
-.postsList-title{
+  }
+  
+  .postList-title {
     text-align: center;
-}
-
-.pagination-container{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin: 0 auto;
+  }
+  
+  .postsList-group {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .postsList-group:hover {
+    border-color: #007bff;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .postsList-group li {
+    list-style: none;
+  }
+  
+  .postsList-group span {
+    font-size: 16px;
+    font-weight: 600;
+    margin-right: 10px;
+  }
+  
+  .pagination-container {
     display: flex;
     justify-content: center;
-}
+    margin-top: 20px;
+  }
+  
+  .pagination-container .pagination {
+    color: #007bff;
+    text-decoration: none;
+    border: 1px solid #007bff;
+    padding: 5px 10px;
+    border-radius: 4px;
+    transition: all 0.3s ease-in-out;
+    margin: 0px 5px;
+  }
+  
+  .pagination-container .pagination.active {
+    background-color: #007bff;
+    color: #fff;
+  }
+  
+  .pagination-container .pagination:hover {
+    background-color: #007bff;
+    color: #fff;
+  }
